--- a/Resources/views/Form/types.html.twig
+++ b/Resources/views/Form/types.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'ArthemFileUploadBundle' %}
+{% trans_default_domain 'ArthemFileBundle' %}
 
 {% block arthem_file_widget %}
     {% spaceless %}
