improve letter avatar

--- a/Resources/views/Placeholder/letter_avatar.svg.twig
+++ b/Resources/views/Placeholder/letter_avatar.svg.twig
@@ -2,7 +2,7 @@
 <svg  preserveAspectRatio="xMidYMid"  width="500" height="500" viewBox="0 0 500 500" version="1.1"
       xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink">
-    <rect id="bg" fill="{{ color }}" cx="0" cy="0" width="500" height="500"></rect>
+    <rect id="bg" fill="{{ color1 }}" cx="0" cy="0" width="500" height="500"></rect>
     <text text-anchor="middle" x="50%" y="50%" dy="0.35em" fill="white" font-size="200"
           font-family="{{ font }}">{{ text }}</text>
 </svg>
